force-app/main/default/objects/wkdw__EmployeeToPersonAccountFldMap__mdt/wkdw__EmployeeToPersonAccountFldMap__mdt.object-meta.xml
<CustomObject>
    <description>Defines the field mapping required when creating person account records from employee records.</description>
    <label>Employee To Person Account Field Mapping</label>
    <pluralLabel>Employee To Person Account Field Mapping</pluralLabel>
</CustomObject>