force-app/main/default/objects/wkdw__EmployeeToPersonAccountFldMap__mdt/fields/wkdw__IsActive__c.field-meta.xml
<CustomField>
    <fullName>wkdw__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the mapping between this specific employee record and person account is active or not.</description>
    <inlineHelpText>Uncheck this if you don&apos;t want this mapping to be used when creating a Person Account record from an Employee record</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>