force-app/main/default/objects/wkdw__EmployeeToPersonAccountFldMap__mdt/fields/wkdw__SourceField__c.field-meta.xml
<CustomField>
    <fullName>wkdw__SourceField__c</fullName>
    <description>The employee record field that maps to the specified target field on the person account.</description>
    <inlineHelpText>API name of the Employee field. Needs to include the __c if it is a custom field</inlineHelpText>
    <label>Source Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>