force-app/main/default/objects/wkdw__EmployeeToPersonAccountFldMap__mdt/fields/wkdw__TargetField__c.field-meta.xml
<CustomField>
    <fullName>wkdw__TargetField__c</fullName>
    <description>The person account field that maps to the specified source field on the employee.</description>
    <inlineHelpText>API name of the Person Account field. Needs to include the __c if it is a custom field or __pc if it is a Person Account custom field</inlineHelpText>
    <label>Target Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>